--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "http://ziahassan.blog"
+baseURL = "https://hugoblog-6m3.pages.dev"
 theme = "risotto"
 title = "Zia's Blog"
 author = "Zia Hassan"
