change to bear blog

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "themes/themes/elephants"]
 	path = themes/themes/elephants
 	url = https://gitlab.com/meibenny/elephants.git
+[submodule "themes/hugo-bearblog"]
+	path = themes/hugo-bearblog
+	url = https://github.com/janraasch/hugo-bearblog.git
