--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "themes/hugo-texify3"]
 	path = themes/hugo-texify3
 	url = https://github.com/michaelneuper/hugo-texify3.git
+[submodule "themes/beautifulhugo"]
+	path = themes/beautifulhugo
+	url = https://github.com/halogenica/beautifulhugo.git
